--- a/src/assets/styles.sass
+++ b/src/assets/styles.sass
@@ -1,7 +1,12 @@
+// Variables
+$backgroundBgColor: #38495a
+$backgroundFgColor: white
+$titleBgColor: #090A0F
+$titleFgColor: #1B2735
 
 html
   height: 100%
-  background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%)
+  background: radial-gradient(ellipse at bottom, $titleFgColor 0%, $titleBgColor 100%)
   overflow: hidden
 
 h1
@@ -13,18 +18,18 @@ h1
   color: #FFF
   text-align: center
   font-family: 'lato',sans-serif
-  font-weight: 350
+  font-weight: 600
   font-size: 50px
   letter-spacing: 10px
 
   margin-top: -60px
   padding-left: 10px
-
-  background: -webkit-linear-gradient(white, #38495a)
+h1 span
+  background: -webkit-linear-gradient($backgroundFgColor, $backgroundBgColor)
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
   // span
-  //   font-weight: 400
+  // font-weight: 350px
 
 // .middle
 //   background-color: green
